test/parser/input_programs/valid_programs/program19.tea
funcB := (n) ->
    if n isnt 0:
        return n
    end
end

a := [1,2,3]

for x in a:
    funcB(x)
end