test/parser/input_programs/invalid_programs/program6.tea
x := [1, 2, 4]



y := x[1] *** x[2]
out(y)